Upd filepath to to oblig4/mysite/Dockerfile

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,7 +30,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          file: mysite/Dockerfile
+          file: oblig4/mysite/Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/django-docker:latest
       
