--- a/mysite/Dockerfile
+++ b/mysite/Dockerfile
@@ -15,7 +15,7 @@ ENV PYTHONUNBUFFERED 1
 WORKDIR /mysite
 
 #COPY requirements.txt requirements.txt
-RUN pip3 install -r requirements.txt
+#RUN pip3 install -r requirements.txt
 
 COPY . .
 
