--- a/mysite/Dockerfile
+++ b/mysite/Dockerfile
@@ -14,8 +14,8 @@ ENV PYTHONUNBUFFERED 1
 
 WORKDIR /mysite
 
-#COPY requirements.txt requirements.txt
-#RUN pip3 install -r requirements.txt
+COPY requirements.txt requirements.txt
+RUN pip3 install -r requirements.txt
 
 COPY . .
 
